<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oliver.serial.MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        style="@style/base_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/popup_theme"
        app:theme="@style/toolbar_theme"
        tools:background="#222"/>

    <FrameLayout
        android:id="@+id/fl_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/et_edit_command"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:hint="@string/hint_command_to_send"
            android:maxLines="1"
            android:paddingEnd="40dp"
            android:paddingStart="1dp"
            tools:text="ssssssssssssssssssssssssssssssssssssss"/>

        <ImageView
            android:id="@+id/iv_clear_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_clear_input"/>

    </FrameLayout>


    <Button
        android:id="@+id/btn_send_edit_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:paddingTop="5dp"
        android:text="@string/send_command_by_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_edit"/>

    <TextView
        android:id="@+id/uart_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="/dev/ttyS4"/>

    <TextView
        android:id="@+id/uart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/uart_path"
        app:layout_constraintStart_toEndOf="@id/uart_path"
        tools:text="串口1"/>

    <Button
        android:id="@+id/btn_send_default_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/send_default_command"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/uart_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_show_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/uart_path"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send_edit_command"
        tools:text="发送数据"/>

</android.support.constraint.ConstraintLayout>
